adding html structure

--- a/index.html
+++ b/index.html
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-        <nav></nav>
-        <header></header>
-        <section class="rubber-duck"></section>
-        <section class="emergency"></section>
-        <section class="contact"></section>
-</body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <nav>
+      <div class="logo">Logo</div>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/">Talk to the duck</a></li>
+        <li><a href="/">Emergency Kit</a></li>
+        <li><a href="/">Contact</a></li>
+      </ul>
+    </nav>
+    <header>
+        <section class="text">
+            <h1><Hello World /></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, tenetur!</p>
+        </section>
+    </header>
+    <section class="rubber-duck">
+        <div class="left-section">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque repellendus mollitia, non ratione omnis autem quos nobis dolor, unde vero sit doloremque aliquam molestiae quod blanditiis, ut illum distinctio! Libero.</p>
+            <button type="button">Button</button>
+        </div>
+        <div class="right-section">
+            <img src="/" alt="">
+        </div>
+    </section>
+    <section class="emergency">
+        <h2 class="tite">In case of Emergency click on:</h2>
+        <div class="elements">
+            <a href="https://discordapp.com/channels/641221910146842644/641593560394760200">Discord Student Help</a>
+            <a href="https://stackoverflow.com">Stack Overflow</a>
+            <a href="https://developer.mozilla.org">MDN</a>
+            <a href="https://www.w3schools.com/">W3</a>
+            <a href="https://medium.com/">Medium.com</a>
+            <a href="https://www.codenewbie.org/podcast">Podcast</a>
+        </div>
+    </section>
+    <section class="contact">
+        <h3>Contact us</h3>
+        <form>
+            <input type="text">
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+<button type="submit"></button>
+        </form>
+    </section>
+  </body>
 </html>
