--- a/index.html
+++ b/index.html
@@ -17,38 +17,49 @@
       </ul>
     </nav>
     <header>
-        <section class="text">
-            <h1><Hello World /></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, tenetur!</p>
-        </section>
+      <section class="text">
+        <h1>Hello World</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident,
+          tenetur!
+        </p>
+      </section>
     </header>
     <section class="rubber-duck">
-        <div class="left-section">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque repellendus mollitia, non ratione omnis autem quos nobis dolor, unde vero sit doloremque aliquam molestiae quod blanditiis, ut illum distinctio! Libero.</p>
-            <button type="button">Button</button>
-        </div>
-        <div class="right-section">
-            <img src="/" alt="">
-        </div>
+      <div class="left-section">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
+          repellendus mollitia, non ratione omnis autem quos nobis dolor, unde
+          vero sit doloremque aliquam molestiae quod blanditiis, ut illum
+          distinctio! Libero.
+        </p>
+        <button type="button">Button</button>
+      </div>
+      <div class="right-section">
+       <a href="https://rubberduckdebugging.com/" target="_blank"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPQQvm378hlxzrIIoq8R7l6Gv6m5eOAbnJWg&usqp=CAU" alt="rubber-duck-logo" /></a>
+      </div>
     </section>
     <section class="emergency">
-        <h2 class="tite">In case of Emergency click on:</h2>
-        <div class="elements">
-            <a href="https://discordapp.com/channels/641221910146842644/641593560394760200">Discord Student Help</a>
-            <a href="https://stackoverflow.com">Stack Overflow</a>
-            <a href="https://developer.mozilla.org">MDN</a>
-            <a href="https://www.w3schools.com/">W3</a>
-            <a href="https://medium.com/">Medium.com</a>
-            <a href="https://www.codenewbie.org/podcast">Podcast</a>
-        </div>
+      <h2 class="tite">In case of Emergency click on:</h2>
+      <div class="elements">
+        <a
+          href="https://discordapp.com/channels/641221910146842644/641593560394760200"
+          >Discord Student Help</a
+        >
+        <a href="https://stackoverflow.com" target="_blank">Stack Overflow</a>
+        <a href="https://developer.mozilla.org" target="_blank">MDN</a>
+        <a href="https://www.w3schools.com/" target="_blank">W3</a>
+        <a href="https://medium.com/" target="_blank">Medium.com</a>
+        <a href="https://www.codenewbie.org/podcast" target="_blank">Podcast</a>
+      </div>
     </section>
     <section class="contact">
-        <h3>Contact us</h3>
-        <form>
-            <input type="text">
-            <textarea name="" id="" cols="30" rows="10"></textarea>
-<button type="submit"></button>
-        </form>
+      <h2>Contact us</h2>
+      <form>
+        <input type="text" />
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <button type="submit">Submit</button>
+      </form>
     </section>
   </body>
 </html>
